fix: 修改端口为80

--- a/部署说明书.md
+++ b/部署说明书.md
@@ -14,8 +14,8 @@
 3. **启动网站**
    - 进入文件夹，双击运行 `VitiligoTracker.exe`。
    - 看到黑框出现即表示启动成功。
-   - 默认访问地址：`http://localhost:5000`
-   - 如果需要通过公网 IP 访问，请确保服务器防火墙开放了 5000 端口。
+   - 默认访问地址：`http://localhost:5000` (如果使用 Docker 部署则为 `http://localhost`)
+   - 如果需要通过公网 IP 访问，请确保服务器防火墙开放了对应端口。
 
 ---
 
